# dbt-project

./: README.md  assignment2_en.html  assignment2_nl.html  elt.sh  pyproject.toml
api/: .gitignore
data/: 20200705_Austrian_Grand_Prix_Practice_1_laps.csv  20200705_Austrian_Grand_Prix_Practice_1_racecontrol.txt
dbt_formula1/: .user.yml  dbt_project.yml  profiles.yml
dbt_formula1/models/staging/: stg_car_datas.sql  stg_car_positions.sql  stg_constructor_results.sql  stg_driver_results.sql  stg_driver_sprint_results.sql  stg_drivers.sql  stg_lap_times.sql  stg_laps.sql  stg_racecontrols.sql  stg_teams.sql  stg_weathers.sql
dbt_formula1/models/staging/formula1/: src_formula1.yml
load_scripts/: load.py  load1.py  temp.sql
